contact form scrolling repair,homepage whitespace repair

--- a/TLfront/src/app/contact/contact.component.css
+++ b/TLfront/src/app/contact/contact.component.css
@@ -2,3 +2,16 @@ a {
     color: grey;
     text-decoration: none;
 }
+
+/* .contact-form {
+    
+    width: 100%;
+    height: 160vh;
+
+}
+.iframe-container {
+    
+    height: 190vh;
+    
+} */
+  
